--- a/style.css
+++ b/style.css
@@ -73,3 +73,36 @@ button {
     margin: 1%;
     border-radius: 7px;
 }
+
+.stats-container{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: none;
+}
+
+body {
+    background-color: beige;
+}
+
+.header {
+    background-color: #3498db;
+    color: #fff;
+}
+
+.stats-card, .game-card {
+    background-color: #ecf0f1;
+}
+
+h1, h2, h3 {
+    color: #2c3e50;
+}
+
+button {
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
